# MapReduce

./: .travis.yml  CMakeLists.txt  README.md  main.cpp  mapreduce.cpp  mapreduce.h
